src/lwastcalc/scannerx.c
/* Generated by re2c 0.13.6.dev on Mon Dec 17 14:23:27 2012 */
#line 1 "scannerx.re"
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "scanner.h"

scanner_token *scan(scanner_state *state) {

#define YYCTYPE char
#define YYCURSOR (state->cursor)
#define YYLIMIT (state->limit)
#define YYMARKER (state->marker)

	capture_begin(state);

	for(;;) {
	
		
#line 22 "<stdout>"
		{
			YYCTYPE yych;

			yych = *YYCURSOR;
			switch (yych) {
			case 0x00:	goto yy18;
			case '\t':
			case '\n':
			case '\f':
			case '\r':
			case ' ':	goto yy20;
			case '(':	goto yy14;
			case ')':	goto yy16;
			case '*':	goto yy10;
			case '+':	goto yy6;
			case '-':	goto yy8;
			case '.':	goto yy4;
			case '/':	goto yy12;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy2;
			default:	goto yy22;
			}
yy2:
			yych = *(YYMARKER = ++YYCURSOR);
			goto yy29;
yy3:
#line 29 "scannerx.re"
			{ return create_int_token(capture_int(state)); }
#line 59 "<stdout>"
yy4:
			++YYCURSOR;
			switch ((yych = *YYCURSOR)) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy23;
			default:	goto yy5;
			}
yy5:
#line 49 "scannerx.re"
			{ 
			printf( "Unrecognized character: %c\n", *(state->ccursor) );
			continue;
			}
#line 81 "<stdout>"
yy6:
			++YYCURSOR;
#line 33 "scannerx.re"
			{ return create_token(TOKEN_ADD); }
#line 86 "<stdout>"
yy8:
			++YYCURSOR;
#line 35 "scannerx.re"
			{ return create_token(TOKEN_SUB); }
#line 91 "<stdout>"
yy10:
			++YYCURSOR;
#line 37 "scannerx.re"
			{ return create_token(TOKEN_MUL); }
#line 96 "<stdout>"
yy12:
			++YYCURSOR;
#line 39 "scannerx.re"
			{ return create_token(TOKEN_DIV); }
#line 101 "<stdout>"
yy14:
			++YYCURSOR;
#line 41 "scannerx.re"
			{ return create_token(TOKEN_LPAREN); }
#line 106 "<stdout>"
yy16:
			++YYCURSOR;
#line 43 "scannerx.re"
			{ return create_token(TOKEN_RPAREN); }
#line 111 "<stdout>"
yy18:
			++YYCURSOR;
#line 45 "scannerx.re"
			{ return NULL; }
#line 116 "<stdout>"
yy20:
			++YYCURSOR;
#line 47 "scannerx.re"
			{ continue; }
#line 121 "<stdout>"
yy22:
			yych = *++YYCURSOR;
			goto yy5;
yy23:
			++YYCURSOR;
			yych = *YYCURSOR;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy23;
			default:	goto yy25;
			}
yy25:
#line 31 "scannerx.re"
			{ return create_float_token(capture_float(state)); }
#line 144 "<stdout>"
yy26:
			yych = *++YYCURSOR;
			switch (yych) {
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy23;
			default:	goto yy27;
			}
yy27:
			YYCURSOR = YYMARKER;
			goto yy3;
yy28:
			YYMARKER = ++YYCURSOR;
			yych = *YYCURSOR;
yy29:
			switch (yych) {
			case '.':	goto yy26;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy28;
			default:	goto yy3;
			}
		}
#line 53 "scannerx.re"

	}
}
